# Quick-Event

./: .gitignore  CMakeLists.txt  LICENSE  QuickEvent.pro  README.en.md  README.md  main.cpp
Examples/Example1/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  gray_style.qss  main.cpp  orderwork.cpp  orderwork.h  testwork.cpp  testwork.h  userwork.h
Examples/Example2/: CMakeLists.txt  main.cpp
Examples/Example3/: CMakeLists.txt  main.cpp
Examples/Example4/: CMakeLists.txt  main.cpp
Examples/Example5/: CMakeLists.txt  main.cpp
Examples/resource/: style.qrc
event/: CMakeLists.txt  quick.h  quickapplication.cpp  quickapplication.h  quickcontroller.cpp  quickcontroller.h  quickevent.cpp  quickevent.h  quickwork.cpp  quickwork.h
example/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp  orderwork.cpp  orderwork.h  student.cpp  student.h  testwork.cpp  testwork.h  userwork.cpp  userwork.h
